# gpu-llm-inferencing-workload-ops

./: .gitignore  LICENSE  README.md
agent/: .dockerignore  Dockerfile  pyproject.toml
agent/vllm_llmd_agent/: __init__.py  __main__.py  agent.py  config.py  schema.py
agent/vllm_llmd_agent/attribution/: __init__.py  k8s.py
agent/vllm_llmd_agent/collectors/: __init__.py  llmd.py  nvml.py  promparse.py  vllm.py
agent/vllm_llmd_agent/exporters/: __init__.py  base.py  otlp.py  prometheus.py  stdout.py
dashboards/grafana/: executive-overview.json
deploy/helm/gpu-llm-inferencing-workload-ops/: Chart.yaml  values.yaml
deploy/helm/gpu-llm-inferencing-workload-ops/dashboards/: executive-overview.json
deploy/helm/gpu-llm-inferencing-workload-ops/templates/: NOTES.txt  _helpers.tpl  agent-daemonset.yaml  agent-rbac.yaml  epp-metrics-auth.yaml  grafana.yaml  otlp-secret.yaml  prometheus.yaml
deploy/manifests/: agent-daemonset.yaml  agent-servicemonitor.yaml  dcgm-exporter.yaml  epp-metrics-auth.yaml  grafana.yaml  llmd-servicemonitor.yaml  namespace.yaml  otel-collector.yaml  otlp-secret.example.yaml  prometheus-rules.yaml  prometheus.yaml  rbac.yaml  vllm-prefill-decode.yaml  vllm-qwen05b.yaml  vllm-servicemonitor.yaml
deploy/scripts/: deploy-monitoring.sh
docs/: METRICS.md
scripts/: load-test.py  port-forward.sh
